<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">헬퍼포유</string>
    <string name="lineIcon">lineIcon</string>
    <string name="imageIcon">imageIcon</string>
    <string name="arrowIcon">arrowIcon</string>
    <string name="DisclosureIndicator">DisclosureIndicator</string>
    <string name="barMenuButton">barMenuButton</string>
    <string name="menuBarImage">menuBarImage</string>
    <string name="detailTab1">기본정보</string>
    <string name="detailTab2">부가정보</string>
    <string name="detailTab3">출구정보</string>
    <string name="searchTab1">최소시간</string>
    <string name="searchTab2">최소환승</string>
    <string name="searchTab3">급행경로</string>
    <string name="searchTab4">상세정보</string>
    <string name="searchTabButton1">간략정보</string>
    <string name="searchTabButton2">상세정보</string>
    <string name="firstTimeTitle">첫  차</string>
    <string name="lastTimeTitle">막  차</string>
    <string name="TimeTableTitle">시 간 표 정 보</string>
    <string name="SubwayNoticeTitle">시간정보는 지하철 운행시각표를 기준으로 제공되기 때문에 실재 지하철운행과 다를수도 있습니다.</string>
    <string name="SubwayInfoTitle">지하철 정보 사이트</string>
    <string name="NAVER">네이버 지하철 정보</string>
    <string name="DAUM">다음 지하철 정보</string>
    <string name="time_min_type1">분후 도착예정</string>
    <string name="time_min_type2">분</string>
    <string name="time_sec">초후 예정</string>
    <string name="time_sec2">초후 도착예정</string>
    <string name="time_sec_30">잠시후 도착합니다</string>
    <string name="time_sec_0">정차 또는 출발했습니다.</string>
    <string name="searchViewHint">역이름을 입력해주세요.</string>
    <string name="searchButton">검색</string>
    <string name="realTimeDesc1">네트워크 상황에 따라 오차가 생길수도 있습니다.</string>
    <string name="realTimeDesc2">이점 참고하여 주시기를 부탁드립니다.</string>
    <string name="realTimeLoadingText1">실시간정보를 받아오는중입니다.</string>
    <string name="realTimeLoadingText2">사용자가 많은 출퇴근 시간에는\n로딩시간이 길어질수 있습니다.</string>
    <string name="timeTableTab1">실시간도착정보</string>
    <string name="timeTableTab2">시각표계산정보</string>
    <string name="str_done">완료</string>

</resources>
