<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="150dp">
    <LinearLayout android:orientation="vertical" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="150dp">
        <LinearLayout android:orientation="horizontal" android:id="@+id/searchMenuBer" android:layout_width="match_parent" android:layout_height="60dp" />
        <LinearLayout android:orientation="vertical" android:id="@+id/searchInfo" android:paddingTop="2dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="50dp">
            <TextView android:textSize="15dp" android:textStyle="bold" android:textColor="#666666" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/searchInfoDesc01" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="13dp" android:layout_weight="1.0" />
            <TextView android:textSize="14dp" android:textStyle="normal" android:textColor="#888888" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/searchInfoDesc02" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="13dp" android:layout_weight="1.0" />
            <TextView android:textSize="14dp" android:textStyle="normal" android:textColor="#ee8888" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/searchInfoDesc03" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginRight="15dp" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="40dp">
            <Button android:textColor="@drawable/button_search_tab_text_color01" android:id="@+id/search_tab_button1" android:background="@drawable/img_bar_info_menu1" android:paddingBottom="3dp" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/searchTab1" android:layout_weight="1.0" style="@style/detailTabBtnStyle" />
            <Button android:textColor="@drawable/button_search_tab_text_color01" android:id="@+id/search_tab_button2" android:background="@drawable/img_bar_info_menu1" android:paddingBottom="3dp" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/searchTab2" android:layout_weight="1.0" style="@style/detailTabBtnStyle" />
            <Button android:textColor="@drawable/button_search_tab_text_color03" android:id="@+id/search_tab_button4" android:background="@drawable/img_bar_info_menu3" android:paddingBottom="3dp" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/searchTab4" android:layout_weight="1.0" style="@style/detailTabBtnStyle" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>